--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,6 +11,8 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "jsx": "react-jsx",
+    "composite": true,
 
     /* Linting */
     "strict": true,
